--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {
-    "strat": "node app.js"
-  },
+ "scripts":{
+    "test": "echo \"Error:no test specified\" && exit 1",
+    "start":"node app.js"
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
